tests/NormalTests/paczka1/fuzzy1/99161071.err
Error in line 2: t9jYz4 A663 46,7
Error in line 7: t9jYz4 A]34 69,9
Error in line 17: Vzu3cp8xW A734 82,58
Error in line 19: t9jYz4 A663 82,4
Error in line 20: QiFZYD9nomT A663 8,4
